kubernetes/app/01-deployment.yml
# 01-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microblog
spec:
  selector:
    matchLabels:
      app: microblog
  replicas: 2
  template:
    metadata:
      labels:
        app: microblog
    spec:
      containers:
        - image: hajh20/microblog:1.0.2-prod
          imagePullPolicy: Always
          name: microblog
          ports:
          - containerPort: 5000
          resources:
            requests:
              cpu: 250m
            limits:
              cpu: 500m
          livenessProbe:
              httpGet:
                path: /
                port: 5000
